Fix broken slide-in on mobile devices

--- a/theme/material/stylesheets/modules/_slidein.css.sass
+++ b/theme/material/stylesheets/modules/_slidein.css.sass
@@ -20,6 +20,9 @@ body.slidein-open
     opacity: 0.8
     width: 30%
 
+    +max-width($medium)
+      width: 0
+
   .mod-content
     background-color: white
     float: right
